--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>BombCraft's Website</title>
+  <title>Error</title>
   <link href="/style.css" rel="stylesheet" type="text/css" />
   <link rel="icon" href="/Background.png" />
   <script src="/script.js" defer></script>
@@ -14,10 +14,10 @@
   <div class='main'>
     <h1>Error</h1>
 
-    <a href="/immediatemurderprofessionals.github.io/">Go back</a>
+    <a href="/Become-a-Plushie-The-Website/">Go back</a>
 
     Sorry, but this page does not exist. Please go back, there is nothing here.
-    <img src=/immediatemurderprofessionals.github.io/404.png>
+    <img src=/Become-a-Plushie-The-Website/404.png>
   </div>
 </body>
 
