--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
 <p><a href=https://immediatemurderprofessionals.github.io>Go back</a></p>
   
   <p><i>Warning - this place IS under construction! Empty and incomplete pages are expected. There may be typos, and if there are, comment where they are and I will fix them.</i></p>
-<p>Welcome to the official website for Become a Plushie! We have...</p>
+<p>Welcome to the official website for Become a Plushie, a subsidiary of Oshawott Skinning Inc where you can become a marketable plushie or buy existing ones! We have...</p>
   <li><a href=/buy-plushies>Buy some of our plushies!</a></li>
   <li><a href=/become-a-plushie/>Become your own plushie! (Yes, people will buy you)</a></li>
+  <li><a href=/faq/>Frequently asked questions</a></li>
+  <li><a href=https://immediatemurderprofessionals.github.io/Oshawott-Skinning-Inc.-Official-Website>Go back to our main site</a></li>
 </body>
 </html>
