--- a/become-a-plushie/index.html
+++ b/become-a-plushie/index.html
@@ -17,9 +17,9 @@
   <a href="/Become-a-Plushie-The-Website/">Go back</a>
 
   <h2>Become a plushie!</h2>
-<p>Here at Oshawott Skinning Inc, you can become a plushie yourself if you are not satisfied with the ones we already sell! (WARNING: this is irreversible. Think twice before you proceed.) Becoming a plushie is 100% free. When you schedule a plushification appointment, you must provide an OC or something so we know what you should look like after plushification. There is no need to drive to Joey Drew Studios HQ in NYC; I will teleport you there. You may also cancel your appointment any time, up until thirty minutes before your scheduled time. You will remain sentient after plushification; you will just be really small. You will be able to continue your life as usual; you won't be sold to anyone; only mass-produced copies of you will. Your copies will start being sold around a month after plushification.</p>
+<p>Here at Oshawott Skinning Inc, you can become a plushie yourself if you are not satisfied with the ones we already sell! (WARNING: this is irreversible. Think twice before you proceed.) Becoming a plushie is 100% free. When you schedule a plushification appointment, you must provide an OC, fursona, or something else so we know what you should look like after plushification. There is no need to drive to Joey Drew Studios HQ in NYC; I will teleport you there. You may also cancel your appointment any time, up until thirty minutes before your scheduled time. You will remain sentient after plushification; you will just be really small. You will be able to continue your life as usual; you won't be sold to anyone; only mass-produced copies of you will. Your copies will start being sold around a month after plushification.</p>
 
-<a href=about:blank><img src=/Become-a-Plushie-The-Website/Schedule.png></a>
+<a href=/Become-a-Plushie-The-Website/become-a-plushie/schedule><img src=/Become-a-Plushie-The-Website/Schedule.png></a>
 
 </body>
 
