--- a/become-a-plushie/index.html
+++ b/become-a-plushie/index.html
@@ -6,9 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Become a Plushie: The Website</title>
-  <link href="/Oshawott-Skinning-Inc.-Official-Website/style.css" rel="stylesheet" type="text/css" />
-  <script src="/Oshawott-Skinning-Inc.-Official-Website/script.js"></script>
-  <link rel="icon" href="/Oshawott-Skinning-Inc.-Official-Website/Background.png" />
+  <link href="/Become-a-Plushie-The-Website/style.css" rel="stylesheet" type="text/css" />
+  <script src="/Become-a-Plushie-The-Website/script.js"></script>
+  <link rel="icon" href="/Become-a-Plushie-The-Website/Background.png" />
 </head>
 
 <BODY TEXT="#000000">
