--- a/buy-plushies/index.html
+++ b/buy-plushies/index.html
@@ -16,7 +16,7 @@
 
   <a href="/Become-a-Plushie-The-Website/">Go back</a>
 
-  <h2>Become a plushie!</h2>
+  <h2>Buy our plushies!</h2>
 <p>Text</p>
 
 </body>
