--- a/become-a-plushie/schedule/index.html
+++ b/become-a-plushie/schedule/index.html
@@ -16,7 +16,7 @@
 
   <a href="/Become-a-Plushie-The-Website/">Go back</a>
 
-  <h2>Become a plushie!</h2>
+  <h2>Schedule your plushification appointment!</h2>
 <p>Text</p>
 
 </body>
