--- a/faq/index.html
+++ b/faq/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Become a Plushie: The Website</title>
+  <title>Become a Plushie FAQ</title>
   <link href="/Become-a-Plushie-The-Website/style.css" rel="stylesheet" type="text/css" />
   <script src="/Become-a-Plushie-The-Website/script.js"></script>
   <link rel="icon" href="/Become-a-Plushie-The-Website/Background.png" />
@@ -16,8 +16,9 @@
 
   <a href="/Become-a-Plushie-The-Website/">Go back</a>
 
-  <h2>Become a plushie!</h2>
-<p>Text</p>
+  <h2>Frequently asked questions</h2>
+<li>Q. What is the cost of becoming a plushie?</li>
+<li>A. It's free!</li>
 
 </body>
 
