--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
 <p><a href=https://immediatemurderprofessionals.github.io>Go back</a></p>
   
   <p><i>Warning - this place IS under construction! Empty and incomplete pages are expected. There may be typos, and if there are, comment where they are and I will fix them.</i></p>
-<p>Welcome to the official website for Become a Plushie, a subsidiary of Oshawott Skinning Inc where you can become a marketable plushie or buy existing ones! We have...</p>
+<p>Welcome to the official website for Become a Plushie, where you can become a marketable plushie or buy existing ones! Here, you can:</p>
   <li><a href=/Become-a-Plushie-The-Website/buy-plushies/>Buy some of our plushies!</a></li>
   <li><a href=/Become-a-Plushie-The-Website/become-a-plushie/>Become your own plushie! (Yes, people will buy you)</a></li>
-  <li><a href=/Become-a-Plushie-The-Website/faq/>Frequently asked questions</a></li>
-  <li><a href=https://immediatemurderprofessionals.github.io/Oshawott-Skinning-Inc.-Official-Website>Go back to our main site</a></li>
+  <li><a href=/Become-a-Plushie-The-Website/faq/>View answers to frequently asked questions</a></li>
 </body>
 </html>
