--- a/become-a-plushie/schedule/index.html
+++ b/become-a-plushie/schedule/index.html
@@ -17,7 +17,9 @@
   <a href="/Become-a-Plushie-The-Website/">Go back</a>
 
   <h2>Schedule your plushification appointment!</h2>
-<p>Text</p>
+<p>To schedule your plushification appointment, just fill out this form:</p>
+  <br>
+<p>I'll add the google form later.</p>
 
 </body>
 
