--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
   <li><a href=/Become-a-Plushie-The-Website/buy-plushies/>Buy some of our plushies!</a></li>
   <li><a href=/Become-a-Plushie-The-Website/become-a-plushie/>Become your own plushie! (Yes, people will buy you)</a></li>
   <li><a href=/Become-a-Plushie-The-Website/faq/>View answers to frequently asked questions</a></li>
+  <li><a href=/Become-a-Plushie-The-Website/how-this-works/>See how becoming a plushie works</a></li>
 </body>
 </html>
