--- a/buy-plushies/index.html
+++ b/buy-plushies/index.html
@@ -17,7 +17,7 @@
   <a href="/Become-a-Plushie-The-Website/">Go back</a>
 
   <h2>Buy our plushies!</h2>
-<p>Text</p>
+<p>Buying plushies will be available starting February 2, 2025.</p>
 
 </body>
 
