--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width">
   <title>Become a Plushie: The Website</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
-  <link rel="icon" href="HTS.png" />
+  <link rel="icon" href="Background.png" />
 </head>
 
 <body>
