--- a/404.html
+++ b/404.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width">
   <title>Error</title>
   <link href="/style.css" rel="stylesheet" type="text/css" />
-  <link rel="icon" href="/Background.png" />
-  <script src="/script.js" defer></script>
+  <link rel="icon" href="/who is this.png" />
 </head>
 
 <body>
