--- a/how-this-works/index.html
+++ b/how-this-works/index.html
@@ -8,7 +8,7 @@
   <title>How Become a Plushie works</title>
   <link href="/Become-a-Plushie-The-Website/style.css" rel="stylesheet" type="text/css" />
   <script src="/Become-a-Plushie-The-Website/script.js"></script>
-  <link rel="icon" href="/Become-a-Plushie-The-Website/Background.png" />
+  <link rel="icon" href="/Become-a-Plushie-The-Website/who is this.png" />
 </head>
 
 <BODY TEXT="#000000">
