--- a/buy-plushies/index.html
+++ b/buy-plushies/index.html
@@ -8,7 +8,7 @@
   <title>Become a Plushie: The Website</title>
   <link href="/Become-a-Plushie-The-Website/style.css" rel="stylesheet" type="text/css" />
   <script src="/Become-a-Plushie-The-Website/script.js"></script>
-  <link rel="icon" href="/Become-a-Plushie-The-Website/Background.png" />
+  <link rel="icon" href="/Become-a-Plushie-The-Website/who is this.png" />
 </head>
 
 <BODY TEXT="#000000">
@@ -17,7 +17,7 @@
   <a href="/Become-a-Plushie-The-Website/">Go back</a>
 
   <h2>Buy our plushies!</h2>
-<p>Buying plushies will be available starting February 2, 2025.</p>
+<p>Buying plushies will be available starting February 17, 2025.</p>
 
 </body>
 
