--- a/become-a-plushie/index.html
+++ b/become-a-plushie/index.html
@@ -8,7 +8,7 @@
   <title>Become a Plushie: The Website</title>
   <link href="/Become-a-Plushie-The-Website/style.css" rel="stylesheet" type="text/css" />
   <script src="/Become-a-Plushie-The-Website/script.js"></script>
-  <link rel="icon" href="/Become-a-Plushie-The-Website/Background.png" />
+  <link rel="icon" href="/Become-a-Plushie-The-Website/who is this.png" />
 </head>
 
 <BODY TEXT="#000000">
@@ -18,14 +18,14 @@
 
   <h2>Become a plushie!</h2>
 <p>Here at Oshawott Skinning Inc, you can become a plushie yourself if you are not satisfied with the ones we already sell! (WARNING: this is irreversible. Think twice before you proceed.)</p>
-<br>
+
 <p>Becoming a plushie is 100% free. When you schedule a plushification appointment, you must provide an OC, fursona, or something else so we know what you should look like after plushification. There is no need to drive to Joey Drew Studios HQ in NYC; I will teleport you there. You may also cancel your appointment any time, up until thirty minutes before your scheduled time.</p>
-<br>
+
 <p>You will remain sentient after plushification; you will just be really small. You will also be able to continue your life as (mostly) usual; you won't be sold to anyone; only mass-produced copies of you will.</p>
-<br>
+
 <p>You may, if you so desire, not get mass produced. Marketability is completely optional. Your copies will start being sold around a month after plushification if you desire to be marketed.</p>
-<br>
-<a href=/Become-a-Plushie-The-Website/become-a-plushie/schedule><img src=/Become-a-Plushie-The-Website/Schedule.png></a>
+
+<a href="https://docs.google.com/forms/d/e/1FAIpQLSdImR5hjznGyIRopJnCkqepq2Y-WToHAUuZ6WH_l_VrYIfyAg/viewform?usp=dialog"><img src=/Become-a-Plushie-The-Website/Schedule.png></a>
 
 </body>
 
