--- a/become-a-plushie/index.html
+++ b/become-a-plushie/index.html
@@ -27,6 +27,8 @@
 
 <a href="https://docs.google.com/forms/d/e/1FAIpQLSdImR5hjznGyIRopJnCkqepq2Y-WToHAUuZ6WH_l_VrYIfyAg/viewform?usp=dialog"><img src=/Become-a-Plushie-The-Website/Schedule.png></a>
 
+<p>If you live in the People's Republic of China and want to become a plushie, go <a href=/Become-a-Plushie-The-Website/china/>here</a>.</p>
+
 </body>
 
 </html>
