--- a/china/index.html
+++ b/china/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width">
   <title>You can still become a plushie in the People's Republic of China despite the internet censorship!</title>
   <link href="/Become-a-Plushie-The-Website/style.css" rel="stylesheet" type="text/css" />
-  <link rel="icon" href="/Become-a-Plushie-The-Website/favicon.png" />
+  <link rel="icon" href="/Become-a-Plushie-The-Website/who is this.png" />
 </head>
 
 <body TEXT=000000>
