--- a/how-this-works/index.html
+++ b/how-this-works/index.html
@@ -17,7 +17,7 @@
   <a href="/Become-a-Plushie-The-Website/">Go back</a>
 
   <h2>How plushification works</h2>
-<p>Text</p>
+<p>Yeah so basically your consciousness is copied onto a hard drive, then your body is destroyed and used for various things, including the assembly of your new plush body, which your consciousness is then copied onto, completing the transformation.</p>
 
 </body>
 
