--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
   <li><a href=/Become-a-Plushie-The-Website/faq/>View answers to frequently asked questions</a></li>
   <li><a href=/Become-a-Plushie-The-Website/how-this-works/>See how becoming a plushie works</a></li>
 <br>
-<p>Our main site: https://immediatemurderprofessionals.github.io/Oshawott-Skinning-Inc.-Official-Website</p>
+<p>Become a Plushie is a subsidiary of <a href=https://immediatemurderprofessionals.github.io/Oshawott-Skinning-Inc.-Official-Website>Oshawott Skinning Inc.</a></p>
 </body>
 </html>
