--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <h2>Main Page</h2>
 <p><a href=https://immediatemurderprofessionals.github.io>Go back</a></p>
   
-  <p><i>Warning - this place IS under construction! Empty and incomplete pages are expected. There may be typos, and if there are, comment where they are and I will fix them.</i></p>
+ 
 <p>Welcome to the official website for Become a Plushie, where you can become a marketable plushie or buy existing ones! Here, you can:</p>
   <li><a href=/Become-a-Plushie-The-Website/buy-plushies/>Buy some of our plushies!</a></li>
   <li><a href=/Become-a-Plushie-The-Website/become-a-plushie/>Become your own plushie! (Yes, people will buy you)</a></li>
@@ -25,5 +25,9 @@
   <li><a href=/Become-a-Plushie-The-Website/how-this-works/>See how becoming a plushie works</a></li>
 <br>
 <p>Become a Plushie is a subsidiary of <a href=https://immediatemurderprofessionals.github.io/Oshawott-Skinning-Inc.-Official-Website>Oshawott Skinning Inc.</a></p>
+
+<br>
+<br>
+<p>This website was created by <a href=https://github.com/ImmediateMurderProfessionals>BombCraft</a>.</p>
 </body>
 </html>
